# Notify

./: .gitignore  Makefile  README.md
api/: db.sqlite3  pyproject.toml
api/api/: celery.py  gunicorn.py  settings.py  urls.py
api/docker/: Dockerfile  local.yaml
api/infrastructure/: deployment.yaml  svc.yaml
api/main/: models.py  views.py
api/main/migrations/: 0001_initial.py
worker/: requirements.txt
worker/app/: config.py  constants.py  tasks.py
worker/docker/: Dockerfile  local.yml
worker/infrastructure/: configmap.yaml  deployment.yaml
